turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:48: error: value Array is not a member of Array[Array[Int]]
  rule = Array( Array( Array(1,2,0), Array(1,2,1) )Array( Array(0,1,0), Array(0,1,1) ) )
                                                   ^